--- a/integration/docker-compose.yml
+++ b/integration/docker-compose.yml
@@ -2,7 +2,7 @@ version: '3.1'
 
 services:
   generator:
-    image: docker-registry:55000/gen:ci-16
+    image: docker-registry:55000/gen:ci-${GENERATOR_BUILD_NUMBER-21}
     # ports:
     #   - "8080:80"
   mail:
@@ -12,4 +12,6 @@ services:
   integration:
     build:
       context: .
-    image: docker-registry:55000/gen:integration-10
+    image: docker-registry:55000/gen:integration-${BUILD_NUMBER-10}
+    environment:
+      - TEAMCITY_PROJECT_NAME
